# Axiom.jl

./: .gitattributes  .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  GOVERNANCE.md  Justfile  MAINTAINERS.md  META.scm  Mustfile  NOTICE  Project.toml  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  REGISTRY-READINESS.md  RELEASE-CHECKLIST.adoc  REPO-STANDARD-MUST-INTEND-LIKE.adoc  ROADMAP.adoc  ROADMAP.md  RSR_OUTLINE.adoc  SECURITY.md  SONNET-TASKS.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  axiom-abi.ipkg  flake.nix  guix.scm  justfile  (+6 more)
.claude/: CLAUDE.md
.github/: dependabot.yml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: humans.txt  security.txt
audits/: assail-classifications.a2ml  audit-ffi-unsafe.adoc
benchmark/: benchmarks.jl  framework_comparison.jl  pytorch_bench.py  threaded_benchmark.jl
crypto/: .gitignore  Cargo.toml  README.md
crypto/src/: lib.rs
docs/: CITATIONS.adoc  Project.toml  flagship-rubric.adoc  make.jl  testing-taxonomy.adoc
examples/: SafeDOMExample.affine  SafeDOMExample.res  mnist.jl  simple_classifier.jl
ext/: AxiomAMDGPUExt.jl  AxiomCUDAExt.jl  AxiomCryptoExt.jl  AxiomDSPExt.jl  AxiomFPGAExt.jl  AxiomMathExt.jl  AxiomMetalExt.jl  AxiomNPUExt.jl  AxiomPPUExt.jl  AxiomPyTorchExt.jl  AxiomQPUExt.jl  AxiomSMTExt.jl  AxiomTPUExt.jl  AxiomVPUExt.jl
rust/: Cargo.toml
rust/benches/: backend_benchmarks.rs
rust/src/: ffi.rs  lib.rs  tensor.rs
rust/src/ops/: activations.rs  conv.rs  matmul.rs  mod.rs  norm.rs  pool.rs
scripts/: coprocessor-evidence.jl  coprocessor-resilience-evidence.jl  crypto-production-evidence.jl  crypto-strict-evidence.jl  dsp-strict-evidence.jl  fpga-production-evidence.jl  fpga-strict-evidence.jl  (+13 more)
(+197 files in other folders)
