[package]
name = "axiom-core"
version = "0.1.0"
edition = "2021"
authors = ["Axiom.jl Contributors"]
description = "High-performance Rust backend for Axiom.jl"
license = "MIT"

[lib]
name = "axiom_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linear algebra
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
blas-src = { version = "0.9", features = ["openblas"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }

# Parallelism
rayon = "1.8"

# SIMD (optional)
packed_simd_2 = { version = "0.3", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# FFI
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.10"

# Serialization (for model loading)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[features]
default = []
simd = ["packed_simd_2"]
cuda = []  # Future CUDA support
metal = []  # Future Metal support

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
